# objectTracking_python

./: multiple_tracking.py  single_tracking.py
cmake_opencv_build/: .gitignore  CMakeLists.txt  VCPKG_Install.md  build.sh  install.sh  kcf_multi_tracking.cpp  kcf_single_tracking.cpp  print_kcftrack_param.cpp  print_opencv_info.cpp  single_tracking.cpp  vcpkg.json
